test/captureIndexReplacement7.slq

def main(){
	x:=H(0:ğ”¹);
	a:=vector(3,x);
	forget(x=a[0]);
	(a[0],f):=(0:ğ”¹,(){ // error
		(a[1],a[2]):=(a[2],a[1]);
		return a; // error
	});
	return f;
}
